[package]
name = "rust-udf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_udf"
crate-type = ["cdylib"]

[dependencies]
statrs = "0.16.0"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
